fixed modals z-index

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -78,7 +78,7 @@ header {
     background-color: var(--bg);
     /* box-shadow: 0 10px 30px 15px var(--bg-contrast); */
     margin-bottom: 20px;
-    z-index: 99999999;
+    z-index: 2;
 }
 
 header #logo {
@@ -128,6 +128,7 @@ header #profile_pic {
     width: 120px;
     height: 120px;
     border-radius: 50%;
+    z-index: 99999999;
 }
 
 
@@ -184,6 +185,7 @@ button.close span {
 
 #renameModal {
     border-radius: 20px;
+    z-index: 99999999;
 }
 
 .modal-user {
@@ -198,6 +200,7 @@ button.close span {
     overflow: auto;
     /* background-color: rgb(0,0,0); */
     background-color: rgba(0, 0, 0, 0.4);
+    z-index: 99999999;
 }
 
 .modal-user .modal-content {
